# FastEdge-sdk-rust

./: .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  DOCUMENTATION.md  README.md  build-examples.sh  llms.txt  release-plz.toml
.github/: copilot-instructions.md
.github/workflows/: build-examples.yaml  cd.yaml  ci.yaml  copilot-sync.yml  release-plz.yml  release.yml
context/: CHANGELOG.md  CONTEXT_INDEX.md  PLUGIN_CONTRACT.md  PROJECT_OVERVIEW.md
context/architecture/: HOST_SDK_CONTRACT.md  REQUEST_LIFECYCLE.md  RUNTIME_ARCHITECTURE.md  SDK_ARCHITECTURE.md
context/development/: BUILD_AND_CI.md
context/reference/: ERROR_CODES.md  PROPERTIES_REFERENCE.md
derive/: CHANGELOG.md  Cargo.toml  README.md
derive/.cargo/: config.toml
derive/src/: lib.rs
docs/: CDN_APPS.md  HOST_SERVICES.md  INDEX.md  SDK_API.md  quickstart.md
examples/: README.md
examples/api-wrapper/: Cargo.toml
examples/api-wrapper/src/: lib.rs
examples/backend/: Cargo.toml
examples/backend/src/: lib.rs
examples/cdn/ab_testing/: Cargo.toml  README.md
examples/cdn/ab_testing/fixtures/: .env  existing-cookie-a.test.json  existing-cookie-b.test.json  missing-config.test.json  new-visitor.test.json
examples/cdn/ab_testing/src/: lib.rs
examples/cdn/api_key/: Cargo.toml  README.md
examples/cdn/api_key/fixtures/: .env  happy-path.test.json  invalid-key.test.json  missing-header.test.json  missing-secret.test.json
examples/cdn/api_key/src/: lib.rs
examples/cdn/body/: Cargo.toml  README.md
examples/cdn/body/fixtures/: client.test.json  skip.test.json
examples/cdn/body/src/: lib.rs
examples/cdn/cache_control/: Cargo.toml  README.md
examples/cdn/cache_control/fixtures/: .env  error-status.test.json  happy-path.test.json  javascript-asset.test.json  json-api.test.json  static-asset.test.json  unknown-content-type.test.json  xml-api.test.json
examples/cdn/cache_control/src/: lib.rs
examples/cdn/convert_image/: Cargo.toml  README.md
examples/cdn/convert_image/src/: lib.rs
examples/cdn/cors/: Cargo.toml  README.md
examples/cdn/cors/fixtures/: .env  disallowed-origin.test.json  happy-path.test.json  no-origin.test.json  preflight.test.json  wildcard-origins.test.json  wildcard.env
examples/cdn/cors/src/: lib.rs
examples/cdn/custom/: Cargo.toml  README.md
examples/cdn/custom/fixtures/: invalid-status.test.json  status-200.test.json  status-403.test.json
examples/cdn/custom/src/: lib.rs
examples/cdn/custom_error_pages/: Cargo.toml  README.md  build.rs
examples/cdn/custom_error_pages/fixtures/: 200-passthrough.test.json  400-bad-request.test.json  404-not-found.test.json  418-fallback.test.json  500-internal-server-error.test.json  502-bad-gateway.test.json
examples/cdn/custom_error_pages/public/: styles.css
examples/cdn/custom_error_pages/src/: lib.rs
examples/cdn/custom_error_pages/templates/: error_page.hbs
examples/cdn/geo_redirect/: Cargo.toml  README.md
examples/cdn/geo_redirect/fixtures/: default.test.json  germany.test.json
examples/cdn/geo_redirect/src/: .env  lib.rs
examples/cdn/geoblock/: Cargo.toml  README.md
examples/cdn/geoblock/fixtures/: .env  allowed-country.test.json  blocked-country.test.json  missing-config.test.json
examples/cdn/geoblock/src/: lib.rs
examples/cdn/headers/: Cargo.toml  README.md
examples/cdn/headers/fixtures/: happy-path.test.json
examples/cdn/headers/src/: lib.rs
examples/cdn/hello_world/: Cargo.toml  README.md
examples/cdn/hello_world/fixtures/: happy-path.test.json
examples/cdn/http_call/: Cargo.toml  README.md
examples/cdn/jwt/: Cargo.toml  README.md
examples/cdn/key_value/: Cargo.toml  README.md
examples/cdn/large_env_variable/: Cargo.toml  README.md
examples/cdn/log_time/: Cargo.toml  README.md
examples/cdn/md2html/: Cargo.toml  README.md
examples/cdn/properties/: Cargo.toml  README.md
examples/cdn/variables_and_secrets/: Cargo.toml  README.md
examples/classification-nn-demo/: Cargo.toml
examples/classification-nn-demo/src/: image2tensor.rs  lib.rs
examples/dummy/: Cargo.toml
examples/fetch/: Cargo.toml  README.md
examples/fetch/src/: lib.rs
examples/key-value/: Cargo.toml
examples/key-value/src/: lib.rs
examples/markdown-render/: Cargo.toml
examples/markdown-render/src/: lib.rs
examples/print/: Cargo.toml
examples/secret/: Cargo.toml
examples/secret/src/: lib.rs
examples/watermark/: Cargo.toml
fastedge-plugin-source/: .generation-config.md  check-copilot-sync.sh  generate-docs.sh  generate-llms-txt.sh  manifest.json
fastedge-rust-sdk/: Cargo.toml  README.md
fastedge-rust-sdk/derive/: Cargo.toml  README.md
fastedge-rust-sdk/derive/src/: lib.rs
fastedge-rust-sdk/examples/backend/: Cargo.toml
fastedge-rust-sdk/examples/dummy/: Cargo.toml
fastedge-rust-sdk/examples/print/: Cargo.toml
fastedge-rust-sdk/examples/watermark/: Cargo.toml
fastedge-rust-sdk/src/: backend.rs  http_client.rs  lib.rs
rust/: Cargo.toml
rust/derive/src/: lib.rs
rust/examples/backend/src/: lib.rs
rust/examples/print/: Cargo.toml
rust/src/: backend.rs  http_client.rs  wagi.rs
src/: helper.rs  http_client.rs  key_value.rs  lib.rs  proxywasm.rs  utils.rs
src/proxywasm/: dictionary.rs  key_value.rs  mod.rs  secret.rs  utils.rs
wit/: dictionary.wit  http-client.wit  http-handler.wit  http.wit  key-value.wit  secret.wit  world.wit
(+118 files in other folders)
