[workspace]
members = ["derive", ".", "examples/*"]

[workspace.package]
version = "0.1.7"
edition = "2021"
license = "Apache-2.0"
description = "FastEdge Rust SDK that helps you to create edge cloud application using WASM"
documentation = "https://docs.rs/fastedge"
repository = "https://github.com/G-Core/FastEdge-sdk-rust.git"
authors = ["FastEdge Development Team <fastedge@gcore.com>", "Ruslan Pislari <ruslanti@gmail.com>"]


[package]
name = "fastedge"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
description = { workspace = true }
documentation = { workspace = true }
repository = { workspace = true }
autoexamples = false

[lib]
name = "fastedge"

[features]
default = []
json = ["serde_json"]

[dependencies]
fastedge-derive = { path = "derive", version = "0.1.7" }
http = "1.1.0"
bytes = "^1.5"
wit-bindgen = "0.30.0"
thiserror = "^1.0"
tracing = "^0.1"
mime = "^0.3"
serde_json = { version = "^1.0", optional = true }

[dev-dependencies]
anyhow = "1.0"

