[workspace]
members = ["derive", ".", "examples/*"]

[workspace.package]
version = "0.3.2"
edition = "2021"
license = "Apache-2.0"
description = "FastEdge Rust SDK that helps you to create edge cloud application using WASM"
documentation = "https://docs.rs/fastedge"
repository = "https://github.com/G-Core/FastEdge-sdk-rust.git"
authors = ["FastEdge Development Team <fastedge@gcore.com>", "Ruslan Pislari <ruslanti@gmail.com>"]


[package]
name = "fastedge"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
description = { workspace = true }
documentation = { workspace = true }
repository = { workspace = true }
autoexamples = false
readme = "README.md"
keywords = ["wasm", "webassembly", "edge-computing", "serverless", "fastedge"]
categories = ["wasm", "web-programming", "network-programming"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
targets = ["wasm32-wasip1"]

[lib]
name = "fastedge"

[features]
default = ["proxywasm"]
proxywasm = []
json = ["serde_json"]

[dependencies]
fastedge-derive = { path = "derive", version = "0.3" }
http = "1.3"
bytes = "1.10"
wit-bindgen = "0.46"
thiserror = "2.0"
mime = "^0.3"
serde_json = { version = "^1.0", optional = true }

[dev-dependencies]

