[package]
name = "fastedge-derive"
version = { workspace = true }
edition = "2021"
license = "Apache-2.0"
description = "Procedural macros for the FastEdge Rust SDK"
documentation = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
readme = "README.md"
keywords = ["wasm", "webassembly", "edge-computing", "macro", "fastedge"]
categories = ["wasm", "web-programming"]

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]

[lib]
name = "fastedge_derive"
proc-macro = true
doctest = false

[features]
default = []

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"

