[package]
name = "fastedge"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
autoexamples = false

[lib]
name = "fastedge"

[features]
default = []
json = ["serde_json"]

[dependencies]
fastedge-derive = {path = "derive" }
http = "0.2"
bytes = "1.5"
wit-bindgen = "0.9"
thiserror = "1.0"
tracing = "0.1"
mime = "0.3"
serde_json = {version = "1.0", optional = true}

